#ifdef __GNUC__
#pragma GCC diagnostic push
#pragma GCC diagnostic ignored "-Wunused-function"
#endif
// Autogenerated with StateSmith 0.21.0-alpha-1+7e3f96c13426722a35ad6604c427da48d8538e48.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#include "Holdseq.h"
#include <stdbool.h> // required for `consume_event` flag
#include <string.h> // for memset

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(Holdseq* sm, Holdseq_StateId desired_state);

static void ROOT_enter(Holdseq* sm);

static void COLLECTING_enter(Holdseq* sm);

static void COLLECTING_exit(Holdseq* sm);

static void COLLECTING_on_other_key(Holdseq* sm);

static void COLLECTING_on_primary_release(Holdseq* sm);

static void COLLECTING_on_secondary_press(Holdseq* sm);

static void IDLE_enter(Holdseq* sm);

static void IDLE_exit(Holdseq* sm);

static void IDLE_on_primary_press(Holdseq* sm);

static void PRIMARY_HELD_enter(Holdseq* sm);

static void PRIMARY_HELD_exit(Holdseq* sm);

static void PRIMARY_HELD_on_first_secondary(Holdseq* sm);

static void PRIMARY_HELD_on_other_key(Holdseq* sm);

static void PRIMARY_HELD_on_primary_release(Holdseq* sm);


// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void Holdseq_ctor(Holdseq* sm)
{
    memset(sm, 0, sizeof(*sm));
}

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void Holdseq_start(Holdseq* sm)
{
    ROOT_enter(sm);
    // ROOT behavior
    // uml: TransitionTo(ROOT.<InitialState>)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
        // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
        
        // ROOT.<InitialState> behavior
        // uml: TransitionTo(idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `idle`.
            IDLE_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ROOT.<InitialState>
    } // end of behavior for ROOT
}

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void Holdseq_dispatch_event(Holdseq* sm, Holdseq_EventId event_id)
{
    switch (sm->state_id)
    {
        // STATE: Holdseq
        case Holdseq_StateId_ROOT:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: collecting
        case Holdseq_StateId_COLLECTING:
            switch (event_id)
            {
                case Holdseq_EventId_ON_SECONDARY_PRESS: COLLECTING_on_secondary_press(sm); break;
                case Holdseq_EventId_ON_PRIMARY_RELEASE: COLLECTING_on_primary_release(sm); break;
                case Holdseq_EventId_ON_OTHER_KEY: COLLECTING_on_other_key(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: idle
        case Holdseq_StateId_IDLE:
            switch (event_id)
            {
                case Holdseq_EventId_ON_PRIMARY_PRESS: IDLE_on_primary_press(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: primary_held
        case Holdseq_StateId_PRIMARY_HELD:
            switch (event_id)
            {
                case Holdseq_EventId_ON_FIRST_SECONDARY: PRIMARY_HELD_on_first_secondary(sm); break;
                case Holdseq_EventId_ON_PRIMARY_RELEASE: PRIMARY_HELD_on_primary_release(sm); break;
                case Holdseq_EventId_ON_OTHER_KEY: PRIMARY_HELD_on_other_key(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
    }
    
}

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(Holdseq* sm, Holdseq_StateId desired_state)
{
    while (sm->state_id != desired_state)
    {
        switch (sm->state_id)
        {
            case Holdseq_StateId_COLLECTING: COLLECTING_exit(sm); break;
            
            case Holdseq_StateId_IDLE: IDLE_exit(sm); break;
            
            case Holdseq_StateId_PRIMARY_HELD: PRIMARY_HELD_exit(sm); break;
            
            default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
        }
    }
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ROOT
////////////////////////////////////////////////////////////////////////////////

static void ROOT_enter(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state COLLECTING
////////////////////////////////////////////////////////////////////////////////

static void COLLECTING_enter(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_COLLECTING;
}

static void COLLECTING_exit(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_ROOT;
}

static void COLLECTING_on_other_key(Holdseq* sm)
{
    // collecting behavior
    // uml: on_other_key TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        COLLECTING_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for collecting
    
    // No ancestor handles this event.
}

static void COLLECTING_on_primary_release(Holdseq* sm)
{
    // collecting behavior
    // uml: on_primary_release TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        COLLECTING_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for collecting
    
    // No ancestor handles this event.
}

static void COLLECTING_on_secondary_press(Holdseq* sm)
{
    // collecting behavior
    // uml: on_secondary_press TransitionTo(collecting)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        COLLECTING_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `collecting`.
        COLLECTING_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for collecting
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state IDLE
////////////////////////////////////////////////////////////////////////////////

static void IDLE_enter(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_IDLE;
}

static void IDLE_exit(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_ROOT;
}

static void IDLE_on_primary_press(Holdseq* sm)
{
    // idle behavior
    // uml: on_primary_press TransitionTo(primary_held)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        IDLE_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `primary_held`.
        PRIMARY_HELD_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for idle
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state PRIMARY_HELD
////////////////////////////////////////////////////////////////////////////////

static void PRIMARY_HELD_enter(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_PRIMARY_HELD;
}

static void PRIMARY_HELD_exit(Holdseq* sm)
{
    sm->state_id = Holdseq_StateId_ROOT;
}

static void PRIMARY_HELD_on_first_secondary(Holdseq* sm)
{
    // primary_held behavior
    // uml: on_first_secondary TransitionTo(collecting)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `collecting`.
        COLLECTING_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

static void PRIMARY_HELD_on_other_key(Holdseq* sm)
{
    // primary_held behavior
    // uml: on_other_key TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

static void PRIMARY_HELD_on_primary_release(Holdseq* sm)
{
    // primary_held behavior
    // uml: on_primary_release TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        PRIMARY_HELD_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for primary_held
    
    // No ancestor handles this event.
}

// Thread safe.
char const * Holdseq_state_id_to_string(Holdseq_StateId id)
{
    switch (id)
    {
        case Holdseq_StateId_ROOT: return "ROOT";
        case Holdseq_StateId_COLLECTING: return "COLLECTING";
        case Holdseq_StateId_IDLE: return "IDLE";
        case Holdseq_StateId_PRIMARY_HELD: return "PRIMARY_HELD";
        default: return "?";
    }
}

// Thread safe.
char const * Holdseq_event_id_to_string(Holdseq_EventId id)
{
    switch (id)
    {
        case Holdseq_EventId_ON_FIRST_SECONDARY: return "ON_FIRST_SECONDARY";
        case Holdseq_EventId_ON_OTHER_KEY: return "ON_OTHER_KEY";
        case Holdseq_EventId_ON_PRIMARY_PRESS: return "ON_PRIMARY_PRESS";
        case Holdseq_EventId_ON_PRIMARY_RELEASE: return "ON_PRIMARY_RELEASE";
        case Holdseq_EventId_ON_SECONDARY_PRESS: return "ON_SECONDARY_PRESS";
        default: return "?";
    }
}

#ifdef __GNUC__
#pragma GCC diagnostic pop
#endif
